--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -46,31 +46,31 @@ body {
   font-weight: 500;
 }
 #header {
-  font-size: 37px;
+  font-size: 45px;
   color: #ffffff;
   padding-bottom: 23px;
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
-  margin-top: -175px;
+  margin-top: -34%;
+  margin-bottom: 24%;
 }
 
 #ourCompany {
   color: #f2f2f2;
   font-size: 12px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-left: 120px;
-  margin-right: 120px;
+  margin: 340px 120px 0px 120px;
+  display: none;
 }
 
 #ourTeam {
   color: #f2f2f2;
   font-family: Georgia, "Times New Roman", Times, serif;
   text-align: center;
-  margin-top: 60px;
+  margin-top: 90px;
   font-weight: 300;
   font-size: 34px;
-  padding-top: 40px;
 }
 
 #person {
@@ -169,14 +169,14 @@ body {
     display: flex;
     justify-content: center;
     margin-left: auto;
-    height: 190px;
-    width: 190px;
+    height: 140px;
+    width: 128px;
     margin-right: auto;
   }
   #aboutPerson {
-    margin-left: 8%;
-    margin-right: 8%;
-    font-size: 13px;
+    margin-left: 6%;
+    margin-right: 6%;
+    font-size: 12px;
   }
 
   #ourCompany {
@@ -186,6 +186,8 @@ body {
   }
   #ourTeam{
     margin-top: 15px;
+
+    font-size: 21px;
   }
   #contactInfo {
     font-size: 26px;
@@ -212,8 +214,7 @@ body {
     padding-right: 20px;
   }
   #header {
-    font-size: 20px;
-    padding-bottom: 10px;
-    margin-top: -115px;
+    font-size: 18px;
+    margin-bottom: 18%;
   }
 }
