--- a/src/projectPage/project.css
+++ b/src/projectPage/project.css
@@ -3,7 +3,9 @@
   padding: 0;
 }
 body {
-  background-color: rgb(31, 31, 31);
+  background-image: url(https://images.pexels.com/photos/3616764/pexels-photo-3616764.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+  background-repeat: repeat;
+
 }
 .navBar {
   overflow: hidden;
