--- a/src/projectPage/project.css
+++ b/src/projectPage/project.css
@@ -43,7 +43,7 @@ body {
   font-weight: 500;
 }
 #contactInfo {
-  color: #ffffff;
+  color: #1a1a1a;
   font-family: Georgia, "Times New Roman", Times, serif;
   justify-content: center;
   margin-top: 50px;
