--- a/src/servicesPage/services.css
+++ b/src/servicesPage/services.css
@@ -1,60 +1,83 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    background-image: url(https://images.pexels.com/photos/1000366/pexels-photo-1000366.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-  }
-  .navBar {
-    overflow: hidden;
-    background-color: rgb(23, 27, 31);
-    height: 70px;
-  }
-  .navBar a {
-    float: left;
-    color: #f2f2f2;
-    text-align: right;
-    padding: 27px 20px;
-    text-decoration: none;
-    font-size: 14px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    vertical-align: middle;
-    justify-content: space-between;
-  }
-  
-  .navBar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  .navBar a.active {
-    background-color: #636363;
-    color: white;
-    padding-left: 20px;
-  }
-  #logo {
-    padding: 40px;
-    font-size: 20px;
-    color: #f2f2f2;
-    padding-top: 23px;
-    text-align: right;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-  }
-  #contactInfo {
-    color: #ffffff;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    justify-content: center;
-    margin-top: 10px;
-    font-weight: 300;
-    font-size: 40px;
-    padding-top: 40px;
-    padding-bottom: 30px;
-    text-align: center;
-  }
-  #serviceTypes {
-    color: rgb(255, 255, 255);
-    display: flex;
-    justify-content: space-evenly;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;   
-    font-size: 20px;
-  }
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: white;
+}
+.navBar {
+  overflow: hidden;
+  background-color: rgb(23, 27, 31);
+  height: 70px;
+}
+.navBar a {
+  float: left;
+  color: #f2f2f2;
+  text-align: right;
+  padding: 27px 20px;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  vertical-align: middle;
+  justify-content: space-between;
+}
+
+.navBar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.navBar a.active {
+  background-color: #636363;
+  color: white;
+  padding-left: 20px;
+}
+#logo {
+  padding: 40px;
+  font-size: 20px;
+  color: #f2f2f2;
+  padding-top: 23px;
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+}
+#contactInfo {
+  color: #222222;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  justify-content: center;
+  margin-top: 10px;
+  font-weight: 300;
+  font-size: 40px;
+  padding-top: 40px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+#serviceTypes {
+  color: rgb(20, 20, 20);
+  display: flex;
+  justify-content: space-evenly;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+}
+#remodelingImg {
+  height: 140px;
+  width: 200px;
+}
+#commercialImg {
+  height: 140px;
+  width: 200px;
+}
+#customHomesImg {
+  height: 140px;
+  width: 200px;
+}
+
+#images {
+  display: flex;
+  justify-content: space-evenly;
+}
+#paragraphs {
+  display: flex;
+  justify-content: space-evenly;
+  padding-left: 150px;
+  padding-right: 150px;
+}
