--- a/src/contactPage/contact.css
+++ b/src/contactPage/contact.css
@@ -4,9 +4,9 @@
 }
 
 body {
-background-image: url(https://images.unsplash.com/photo-1652944239224-aa011126ec42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80);
-background-repeat: no-repeat;
-background-size: cover;
+  background-image: url(https://images.unsplash.com/photo-1652944239224-aa011126ec42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
   align-items: center;
   height: 100vh;
   justify-content: center;
@@ -86,13 +86,13 @@ background-size: cover;
   padding-left: 4px;
   background-color: rgb(243, 243, 243);
 }
-.big{
+.big {
   display: block;
   justify-content: center;
   margin: 0 auto;
   font-family: sans-serif;
   margin-bottom: 12px;
-  padding-bottom:100px;
+  padding-bottom: 100px;
 }
 
 #submit {
@@ -102,7 +102,6 @@ background-size: cover;
   height: 45px;
   border-style: none;
   text-transform: uppercase;
-
 }
 #bt {
   padding-bottom: 40px;
@@ -136,6 +135,9 @@ background-size: cover;
   }
   #input {
     width: 300px;
+  }
+  #logo {
+    display: none;
   }
 }
 
