--- a/src/servicesPage/services.css
+++ b/src/servicesPage/services.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 .navBar {
   overflow: hidden;
@@ -51,33 +51,26 @@ body {
   padding-bottom: 30px;
   text-align: center;
 }
-#serviceTypes {
-  color: rgb(20, 20, 20);
-  display: flex;
-  justify-content: space-evenly;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
-}
-#remodelingImg {
-  height: 140px;
-  width: 200px;
-}
-#commercialImg {
-  height: 140px;
-  width: 200px;
-}
-#customHomesImg {
-  height: 140px;
-  width: 200px;
+#img {
+  height: 170px;
+  width: 250px;
 }
 
 #images {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: row;
 }
 #paragraphs {
+  width: 250px;
+}
+#allInfo {
   display: flex;
   justify-content: space-evenly;
-  padding-left: 150px;
-  padding-right: 150px;
+  align-items: center;
+}
+
+#title {
+  text-align: center;
+  padding-bottom: 8px;
 }
