worked on website

--- a/src/servicesPage/services.css
+++ b/src/servicesPage/services.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: #ffffff;
 }
 .navBar {
   overflow: hidden;
@@ -41,13 +41,13 @@ body {
   font-weight: 500;
 }
 #contactInfo {
-  color: #222222;
+  color: #ffffff;
   font-family: Georgia, "Times New Roman", Times, serif;
   justify-content: center;
   margin-top: 10px;
   font-weight: 300;
   font-size: 40px;
-  padding-top: 40px;
+  padding-top: 20px;
   padding-bottom: 30px;
   text-align: center;
 }
@@ -73,4 +73,23 @@ body {
 #title {
   text-align: center;
   padding-bottom: 8px;
+}
+#remodelingAll {
+  background-color: white;
+  padding: 65px 35px 65px 35px;
+  border-radius: 15px;
+  transform: translate(0, 11%);
+}
+#commercialAll {
+  background-color: white;
+  padding: 65px 35px 65px 35px;
+  border-radius: 15px;
+  transform: translate(0, 11%);
+}
+
+#customHomeAll {
+  background-color: white;
+  padding: 65px 35px 65px 35px;
+  border-radius: 15px;
+  transform: translate(0, 11%);
 }
