--- a/src/contactPage/contact.css
+++ b/src/contactPage/contact.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url(https://images.unsplash.com/photo-1652944239224-aa011126ec42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80);
+  background-image: url(https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
   background-repeat: no-repeat;
   background-size: cover;
   align-items: center;
@@ -37,6 +37,7 @@ body {
   background-color: rgb(23, 27, 31);
   height: 70px;
 }
+
 .navBar a {
   float: left;
   color: #f2f2f2;
@@ -77,7 +78,34 @@ body {
   margin-bottom: 12px;
 }
 
-#input {
+#name {
+  width: 312px;
+  height: 40px;
+  border-radius: 0px;
+  border: none;
+  outline: none;
+  padding-left: 4px;
+  background-color: rgb(243, 243, 243);
+}
+#info {
+  width: 312px;
+  height: 40px;
+  border-radius: 0px;
+  border: none;
+  outline: none;
+  padding-left: 4px;
+  background-color: rgb(243, 243, 243);
+}
+#number {
+  width: 312px;
+  height: 40px;
+  border-radius: 0px;
+  border: none;
+  outline: none;
+  padding-left: 4px;
+  background-color: rgb(243, 243, 243);
+}
+#email {
   width: 312px;
   height: 40px;
   border-radius: 0px;
@@ -110,6 +138,9 @@ body {
   #box {
     margin: 180px 110px 0px 110px;
   }
+  body {
+    height: 100vh;
+  }
 }
 @media only screen and (max-width: 600px) {
   #box {
@@ -124,25 +155,35 @@ body {
     justify-content: space-between;
   }
   .navBar a {
-    padding: 0px;
-    padding-top: 25px;
+    padding: 25px 10px;
     font-size: 12px;
-    margin-right: 20px;
   }
   .navBar a.active {
     padding-left: 20px;
     padding-right: 20px;
   }
-  #input {
+  #name {
+    width: 300px;
+  }
+  #number {
+    width: 300px;
+  }
+  #email {
+    width: 300px;
+  }
+  #info {
     width: 300px;
   }
   #logo {
     display: none;
   }
+  body {
+    height: 100vh;
+  }
 }
 
 @media only screen and (max-width: 700px) {
   .navBar a {
-    padding: 25px 0px;
+    padding: 25px 10px;
   }
 }
