--- a/src/goalsPage/goals.css
+++ b/src/goalsPage/goals.css
@@ -44,7 +44,7 @@ body {
   font-weight: 500;
 }
 
-#header {
+.header {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 0.01px;
   font-size: 26px;
@@ -80,7 +80,7 @@ body {
   margin-top: 7%;
   border-radius: 16px;
   background-color: white;
-  display: none;
+  display: block;
 }
 #rightSide2 {
   float: right;
@@ -152,7 +152,7 @@ body {
     font-size: 14px;
     padding-left: 30px;
   }
-  #header {
+  .header {
     padding: 70px 0px 60px 30px;
   }
   #recognize {
@@ -174,7 +174,7 @@ body {
     display: none;
   }
 
-  #header{
+  .header{
     padding: 60px 0px 25px 30px;
     font-size: 22px;
   }
@@ -213,7 +213,7 @@ body {
     #fulfill1 {
       padding: 0px 14px 0px 14px;
     }
-    #header{
+    .header{
       padding: 60px 0px 25px 14px;
     }
     #border span {
