--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -74,8 +74,8 @@ body {
 }
 
 #person {
-  height: 220px;
-  width: 215px;
+  height: 180px;
+  width: 175px;
   padding-left: 10%;
   padding-top: 40px;
 }
@@ -95,10 +95,10 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 10px;
   font-weight: 300;
-  margin-right: 100px;
-  margin-left: 40px;
+  margin-right: 140px;
+  margin-left: 60px;
   padding-top: 40px;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 #contactInfo {
@@ -134,6 +134,7 @@ body {
 }
 
 #footer {
+  padding-top: 20px;
   background-color: rgb(41, 41, 41);
 }
 
