--- a/src/projectPage/project.css
+++ b/src/projectPage/project.css
@@ -111,13 +111,6 @@ body {
   width: 100%;
   text-align: center;
 }
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 .active,
 .dot:hover {
   background-color: #717171;
@@ -128,11 +121,11 @@ body {
 }
 #images {
   width: 100%;
-  height: 500px;
+  height: 480px;
 }
 #images2 {
   width: 100%;
-  height: 540px;
+  height: 510px;
 }
 
 @keyframes fade {
@@ -156,6 +149,9 @@ body {
     width: 100%;
     height: 390px;
   }
+  .text {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -178,5 +174,8 @@ body {
   }
   .navBar a {
     padding: 27px 10px;
+  }
+  .text {
+    font-size: 13px;
   }
 }
