--- a/src/contactPage/contact.css
+++ b/src/contactPage/contact.css
@@ -62,11 +62,11 @@ body {
 
 #logo {
   padding: 40px;
-  font-size: 20px;
+  font-size: 18px;
   color: #f2f2f2;
   padding-top: 23px;
   text-align: right;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
 }
 
@@ -140,6 +140,10 @@ body {
   }
   body {
     height: 100vh;
+  }
+  #logo {
+    font-size: 15px;
+    padding-top: 27px;
   }
 }
 @media only screen and (max-width: 600px) {
