--- a/src/goalsPage/goals.css
+++ b/src/goalsPage/goals.css
@@ -36,12 +36,11 @@ body {
 }
 #logo {
   padding: 40px;
-  font-size: 20px;
+  font-size: 18px;
   color: #f2f2f2;
   padding-top: 23px;
   text-align: right;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 500;
+  font-family: Georgia, "Times New Roman", Times, serif;  font-weight: 500;
 }
 
 .header {
@@ -162,7 +161,7 @@ body {
     padding: 13px 0px 13px 30px;
   }
   #logo {
-    font-size: 16px;
+    font-size: 15px;
     padding-top: 27px;
   }
   #border {
@@ -174,49 +173,50 @@ body {
     display: none;
   }
 
-  .header{
-    padding: 60px 0px 25px 30px;
+  .header {
+    padding: 60px 0px 35px 30px;
     font-size: 22px;
   }
   #recognize {
     margin-top: 40px;
   }
   #border span {
-   font-size: 15px;
+    font-size: 15px;
   }
   .navBar a {
     padding: 27px 10px;
   }
 }
-  @media only screen and (max-width: 500px) {
-    #rightSide {
-      height: 62%;
-    }
-    #strive1 {
-      padding: 0px 14px 0px 14px;
-    }
-    #rightSide2 {
-      height: 62%;
-    }
-    #recognize1 {
-      padding: 0px 14px 0px 14px;
-    }
-    #rightSide3 {
-      height: 62%;
-    }
-    #establish1 {
-      padding: 0px 14px 0px 14px;
-    }
-    #rightSide4 {
-      height: 62%;
-    }
-    #fulfill1 {
-      padding: 0px 14px 0px 14px;
-    }
-    .header{
-      padding: 60px 0px 25px 14px;
-    }
-    #border span {
-    padding-left: 14px;
-    }
+@media only screen and (max-width: 500px) {
+  #rightSide {
+    height: 62%;
+    margin-top: 80px;
   }
+  #strive1 {
+    padding: 0px 14px 35px 14px;
+  }
+  #rightSide2 {
+    height: 62%;
+  }
+  #recognize1 {
+    padding: 0px 14px 35px 14px;
+  }
+  #rightSide3 {
+    height: 62%;
+  }
+  #establish1 {
+    padding: 0px 14px 35px 14px;
+  }
+  #rightSide4 {
+    height: 62%;
+  }
+  #fulfill1 {
+    padding: 0px 14px 35px 14px;
+  }
+  .header {
+    padding: 60px 0px 35px 14px;
+  }
+  #border span {
+    padding-left: 14px;
+  }
+}
