--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -38,7 +38,7 @@ body {
 }
 #logo {
   padding: 40px;
-  font-size: 20px;
+  font-size: 18px;
   color: #f2f2f2;
   padding-top: 23px;
   text-align: right;
@@ -46,7 +46,7 @@ body {
   font-weight: 500;
 }
 #header {
-  font-size: 45px;
+  font-size: 38px;
   color: #ffffff;
   padding-bottom: 23px;
   text-align: center;
@@ -70,7 +70,7 @@ body {
   text-align: center;
   margin-top: 90px;
   font-weight: 300;
-  font-size: 34px;
+  font-size: 30px;
 }
 
 #person {
@@ -105,8 +105,8 @@ body {
   color: #f2f2f2;
   font-family: Georgia, "Times New Roman", Times, serif;
   text-align: center;
-  font-weight: 300;
-  font-size: 34px;
+  font-weight: 200;
+  font-size: 30px;
   padding-top: 70px;
   padding-bottom: 30px;
 }
@@ -120,7 +120,7 @@ body {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 24px;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 #paragraph {
@@ -144,6 +144,10 @@ body {
   }
   #person {
     padding-left: 3%;
+  }
+  #logo {
+    font-size: 15px;
+    padding-top: 27px;
   }
 }
 @media only screen and (max-width: 700px) {
@@ -185,7 +189,7 @@ body {
     margin-left: 50px;
     margin-right: 50px;
   }
-  #ourTeam{
+  #ourTeam {
     margin-top: 15px;
 
     font-size: 21px;
