--- a/src/projectPage/project.css
+++ b/src/projectPage/project.css
@@ -34,11 +34,11 @@ body {
 }
 #logo {
   padding: 40px;
-  font-size: 20px;
+  font-size: 18px;
   color: #f2f2f2;
-  padding-top: 25px;
+  padding-top: 23px;
   text-align: right;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
 }
 #contactInfo {
@@ -47,7 +47,7 @@ body {
   justify-content: center;
   margin-top: 50px;
   font-weight: 300;
-  font-size: 34px;
+  font-size: 33px;
   text-align: center;
 }
 
@@ -151,6 +151,10 @@ body {
   }
   .text {
     font-size: 16px;
+  }
+  #logo {
+    font-size: 15px;
+    padding-top: 27px;
   }
 }
 
