--- a/src/servicesPage/services.css
+++ b/src/servicesPage/services.css
@@ -33,12 +33,11 @@ body {
 }
 #logo {
   padding: 40px;
-  font-size: 20px;
+  font-size: 18px;
   color: #f2f2f2;
   padding-top: 23px;
   text-align: right;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 500;
+  font-family: Georgia, "Times New Roman", Times, serif;  font-weight: 500;
 }
 #contactInfo {
   color: #ffffff;
