--- a/src/contactPage/contact.css
+++ b/src/contactPage/contact.css
@@ -159,12 +159,9 @@ body {
     justify-content: space-between;
   }
   .navBar a {
-    padding: 25px 10px;
+    padding-top: 26px;
     font-size: 12px;
-  }
-  .navBar a.active {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-right: -10px;
   }
   #name {
     width: 60%;
@@ -186,11 +183,5 @@ body {
   }
   #submit {
     width: 38%;
-  }
-}
-
-@media only screen and (max-width: 700px) {
-  .navBar a {
-    padding: 25px 10px;
   }
 }
