--- a/src/goalsPage/goals.css
+++ b/src/goalsPage/goals.css
@@ -40,7 +40,8 @@ body {
   color: #f2f2f2;
   padding-top: 23px;
   text-align: right;
-  font-family: Georgia, "Times New Roman", Times, serif;  font-weight: 500;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 500;
 }
 
 .header {
@@ -58,7 +59,7 @@ body {
   height: 90%;
 }
 #border span {
-  padding: 13px 0px 13px 50px;
+  padding: 13px 0px 28px 50px;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: overline;
   font-size: 18px;
@@ -134,6 +135,9 @@ body {
 #recognize {
   margin-top: 45px;
 }
+#space {
+  margin-bottom: 10px;
+}
 @media only screen and (max-width: 850px) {
   #recognize1 {
     font-size: 14px;
@@ -158,7 +162,7 @@ body {
     margin-top: 0px;
   }
   #border span {
-    padding: 13px 0px 13px 30px;
+    padding: 30px 0px 10px 30px;
   }
   #logo {
     font-size: 15px;
@@ -183,8 +187,14 @@ body {
   #border span {
     font-size: 15px;
   }
+  .navBar {
+    display: flex;
+    justify-content: space-between;
+  }
   .navBar a {
-    padding: 27px 10px;
+    padding-top: 26px;
+    font-size: 12px;
+    margin-right: -10px;
   }
 }
 @media only screen and (max-width: 500px) {
