--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-color: rgb(233, 233, 233);
+  background-color: rgb(41, 41, 41);
 }
 #img {
   justify-content: center;
@@ -123,6 +123,10 @@ body {
   font-size: 15px;
 }
 
+#contact {
+  margin-bottom: 20px;
+}
+
 #paragraph {
   color: #f2f2f2;
   margin-bottom: 0px;
@@ -148,11 +152,6 @@ body {
   #logo {
     font-size: 15px;
     padding-top: 27px;
-  }
-}
-@media only screen and (max-width: 700px) {
-  .navBar a {
-    padding: 25px 15px;
   }
 }
 
@@ -210,17 +209,12 @@ body {
     justify-content: space-between;
   }
   .navBar a {
-    padding: 0px;
-    padding-top: 25px;
+    padding-top: 26px;
     font-size: 12px;
-    margin-right: 20px;
-  }
-  .navBar a.active {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-right: -10px;
   }
   #header {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 18%;
   }
 }
