--- a/src/servicesPage/services.css
+++ b/src/servicesPage/services.css
@@ -37,7 +37,8 @@ body {
   color: #f2f2f2;
   padding-top: 23px;
   text-align: right;
-  font-family: Georgia, "Times New Roman", Times, serif;  font-weight: 500;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 500;
 }
 #contactInfo {
   color: #ffffff;
@@ -64,13 +65,12 @@ body {
   width: 250px;
 }
 #allInfo {
-  display: flex;
+  display: block;
   justify-content: space-evenly;
   align-items: center;
 }
 
 #title {
-  text-align: center;
   padding-bottom: 8px;
 }
 #remodelingAll {
@@ -91,4 +91,20 @@ body {
   padding: 65px 35px 65px 35px;
   border-radius: 15px;
   transform: translate(0, 11%);
+}
+@media only screen and (max-width: 850px) {
+  #logo {
+display: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .navBar {
+    display: flex;
+    justify-content: space-between;
+  }
+  .navBar a {
+    padding-top: 26px;
+    font-size: 12px;
+    margin-right: -10px;
+  }
 }
