--- a/src/goalsPage/goals.css
+++ b/src/goalsPage/goals.css
@@ -10,7 +10,6 @@ body {
 }
 .navBar {
   overflow: hidden;
-  background-color: rgb(23, 27, 31);
   height: 70px;
 }
 .navBar a {
@@ -19,7 +18,7 @@ body {
   text-align: right;
   padding: 27px 20px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   vertical-align: middle;
   justify-content: space-between;
@@ -30,8 +29,11 @@ body {
   color: black;
 }
 .navBar a.active {
-  background-color: #636363;
+  text-decoration: underline;
   color: white;
+  text-decoration-thickness: 2.1px;
+  border-radius: 10px;
+  text-underline-offset: 5px;
   padding-left: 20px;
 }
 #logo {
@@ -55,8 +57,8 @@ body {
   float: left;
   background-color: rgba(255, 255, 255, 0.8);
   position: absolute;
-  width: 40%;
-  height: 90%;
+  width: 36%;
+  height: 90vh;
 }
 #border span {
   padding: 13px 0px 28px 50px;
@@ -71,6 +73,9 @@ body {
   display: flex;
   flex-direction: column;
   width: 30%;
+}
+#bod {
+  height: 90vh;
 }
 #rightSide {
   float: right;
@@ -168,9 +173,12 @@ body {
     font-size: 15px;
     padding-top: 27px;
   }
-  #border {
-    height: 93%;
-  }
+  /* .navBar {
+    height: 6vh;
+  } */
+  /* #border {
+    height: 94vh;
+  } */
 }
 @media only screen and (max-width: 600px) {
   #logo {
@@ -196,12 +204,19 @@ body {
     font-size: 12px;
     margin-right: -10px;
   }
+  /* .navBar {
+    height: 8vh;
+  }
+  #border {
+    height: 92vh;
+  } */
 }
 @media only screen and (max-width: 500px) {
   #rightSide {
     height: 62%;
     margin-top: 80px;
   }
+
   #strive1 {
     padding: 0px 14px 35px 14px;
   }
@@ -230,3 +245,11 @@ body {
     padding-left: 14px;
   }
 }
+/* @media only screen and (max-width: 500px) {
+  .navBar {
+    height: 10.4vh;
+  }
+  #border {
+    height: 89.6vh;
+  }
+} */
