--- a/src/contactPage/contact.css
+++ b/src/contactPage/contact.css
@@ -34,42 +34,51 @@ body {
 
 .navBar {
   overflow: hidden;
-  background-color: rgb(23, 27, 31);
   height: 70px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .navBar a {
   float: left;
-  color: #f2f2f2;
+  color: #1d1d1d;
   text-align: right;
   padding: 27px 20px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   vertical-align: middle;
   justify-content: space-between;
 }
 
 .navBar a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: rgb(255, 255, 255, 0.5);
+  color: rgb(139, 139, 139);
 }
 .navBar a.active {
-  background-color: #636363;
-  color: white;
+  text-decoration: underline;
+  text-decoration-thickness: 2.1px;
+  border-radius: 10px;
+  text-underline-offset: 5px;
+  color: #1d1d1d;
   padding-left: 20px;
+}
+.navBar a.active:hover {
+  color: rgb(139, 139, 139);
+}
+#navItems {
+  float: left;
 }
 
 #logo {
   padding: 40px;
-  font-size: 18px;
-  color: #f2f2f2;
-  padding-top: 23px;
-  text-align: right;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  text-align: end;
+  float: right;
+  right: 0px;
+  align-items: flex-end;
+  justify-content: right;
+  padding-top: 26px;
 }
-
 .type {
   display: block;
   justify-content: center;
