--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -3,57 +3,82 @@
   padding: 0;
 }
 body {
-  background-color: rgb(41, 41, 41);
+  background-color: rgb(26, 35, 26);
 }
-#img {
+#firstPage {
+  background-image: url("https://images.unsplash.com/photo-1616047006789-b7af5afb8c20?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80");
+  background-image: url("https://images.unsplash.com/photo-1616047006789-b7af5afb8c20?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  background-position-y: center;
+  margin-top: 0px;
+}
+/* #img {
   justify-content: center;
   height: 80%;
   width: 100%;
-}
+} */
 .navBar {
   overflow: hidden;
-  background-color: rgb(27, 27, 27);
+  display: flex;
+  justify-content: space-between;
   height: 70px;
 }
 .navBar a {
   float: left;
-  color: #f2f2f2;
+  color: rgb(255, 255, 255);
   text-align: right;
   padding: 27px 20px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   vertical-align: middle;
   justify-content: space-between;
 }
-
+#navLogo{
+  float: right;
+}
+#navItems {
+  float: left;
+}
 .navBar a:hover {
-  background-color: #ddd;
+  background-color: rgb(255, 255, 255, 0.5);
   color: black;
 }
 .navBar a.active {
-  background-color: #636363;
+  text-decoration: underline;
+  text-decoration-thickness: 2.1px;
+  border-radius: 10px;
+  text-underline-offset: 5px;
   color: white;
   padding-left: 20px;
 }
+.navBar a.active:hover {
+  color: black;
+}
+/* #contactNav {
+  margin-right: 1100px;
+} */
 #logo {
   padding: 40px;
-  font-size: 18px;
-  color: #f2f2f2;
-  padding-top: 23px;
-  text-align: right;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  text-align: end;
+  right: 0px;
+  float: right;
+  right: 0px;
+  align-items: flex-end;
+  justify-content: right;
+  padding-top: 26px;
 }
 #header {
-  font-size: 38px;
+  font-size: 40px;
   color: #ffffff;
   padding-bottom: 23px;
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 500;
-  margin-top: -34%;
-  margin-bottom: 24%;
+  padding-top: 20%;
 }
 
 #ourCompany {
@@ -68,7 +93,7 @@ body {
   color: #f2f2f2;
   font-family: Georgia, "Times New Roman", Times, serif;
   text-align: center;
-  margin-top: 90px;
+  margin-top: 60px;
   font-weight: 300;
   font-size: 30px;
 }
@@ -82,7 +107,7 @@ body {
 
 #secondPart {
   padding-top: 50px;
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(56, 81, 56);
 }
 
 #flex {
@@ -107,15 +132,15 @@ body {
   text-align: center;
   font-weight: 200;
   font-size: 30px;
-  padding-top: 70px;
+  padding-top: 120px;
   padding-bottom: 30px;
 }
 #thirdPart {
-  background-color: rgb(41, 41, 41);
+  background-color: rgb(26, 35, 26);
 }
 #contact a {
   display: block;
-  color: #f2f2f2;
+  color: #ffffff;
   padding-bottom: 20px;
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -139,7 +164,7 @@ body {
 
 #footer {
   padding-top: 20px;
-  background-color: rgb(41, 41, 41);
+  background-color: rgb(26, 35, 26);
 }
 
 @media only screen and (max-width: 850px) {
@@ -153,6 +178,12 @@ body {
     font-size: 15px;
     padding-top: 27px;
   }
+  #firstPage{
+    height: 60vh;
+  }
+  #header{
+    padding-top: 28%;
+  }
 }
 
 @media only screen and (max-width: 650px) {
@@ -162,12 +193,16 @@ body {
   #header {
     font-size: 32px;
   }
+ 
 }
 
 @media only screen and (max-width: 600px) {
   #flex {
     display: block;
     padding-bottom: 80px;
+  }
+  #firstPage{
+    height: 44vh;
   }
   #person {
     display: flex;
@@ -198,7 +233,7 @@ body {
     font-size: 26px;
   }
   #paragraph {
-    font-size: 10px;
+    font-size: 9px;
   }
   #contact a {
     font-size: 12px;
@@ -216,5 +251,8 @@ body {
   #header {
     font-size: 20px;
     margin-bottom: 18%;
+  }
+  #img {
+    height: 260px;
   }
 }
