--- a/src/projectPage/project.css
+++ b/src/projectPage/project.css
@@ -3,13 +3,13 @@
   padding: 0;
 }
 body {
-  background-repeat: repeat;
-  background-color: rgb(49, 49, 49);
+  background-color: rgb(38, 54, 64);
 }
 .navBar {
   overflow: hidden;
-  background-color: rgb(27, 27, 27);
   height: 70px;
+  display: flex;
+  justify-content: space-between;
 }
 .navBar a {
   float: left;
@@ -17,29 +17,40 @@ body {
   text-align: right;
   padding: 27px 20px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   vertical-align: middle;
   justify-content: space-between;
 }
 
 .navBar a:hover {
-  background-color: #ddd;
+  background-color: rgb(255, 255, 255, 0.5);
   color: black;
 }
 .navBar a.active {
-  background-color: #636363;
+  text-decoration: underline;
+  text-decoration-thickness: 2.1px;
+  border-radius: 10px;
+  text-underline-offset: 5px;
   color: white;
   padding-left: 20px;
+  background-color: none;
 }
+#navItems {
+  float: left;
+}
+
 #logo {
   padding: 40px;
-  font-size: 18px;
-  color: #f2f2f2;
-  padding-top: 23px;
-  text-align: right;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  text-align: end;
+  float: right;
+  right: 0px;
+  align-items: flex-end;
+  justify-content: right;
+  padding-top: 26px;
+}
+.navBar a.active:hover {
+  color: black;
 }
 #contactInfo {
   color: #ffffff;
@@ -51,10 +62,10 @@ body {
   font-size: 28px;
   text-align: center;
 }
-
+/* 
 * {
   box-sizing: border-box;
-}
+} */
 
 .slideshow-container {
   max-width: 720px;
@@ -134,7 +145,6 @@ body {
   width: 100%;
   text-align: center;
 }
-.active,
 .dot:hover {
   background-color: #717171;
 }
@@ -176,9 +186,10 @@ body {
     font-size: 16px;
   }
   #logo {
-    font-size: 15px;
-    padding-top: 27px;
-  }
+    padding: 20px;
+    padding-top: 23px;
+    width: 114px;
+}
 }
 
 @media only screen and (max-width: 600px) {
