--- a/src/servicesPage/services.css
+++ b/src/servicesPage/services.css
@@ -3,20 +3,19 @@
   padding: 0;
 }
 body {
-  background-color: #ffffff;
+  background-color: #303D4B;
 }
 .navBar {
   overflow: hidden;
-  background-color: rgb(23, 27, 31);
   height: 70px;
 }
 .navBar a {
   float: left;
-  color: #f2f2f2;
+  color: #ffffff;
   text-align: right;
   padding: 27px 20px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   vertical-align: middle;
   justify-content: space-between;
@@ -27,18 +26,25 @@ body {
   color: black;
 }
 .navBar a.active {
-  background-color: #636363;
-  color: white;
+  text-decoration: underline;
+  text-decoration-thickness: 2.1px;
+  border-radius: 10px;
+  text-underline-offset: 5px;
+  color: rgb(255, 255, 255);
   padding-left: 20px;
 }
+#navItems {
+  float: left;
+}
+
 #logo {
   padding: 40px;
-  font-size: 18px;
-  color: #f2f2f2;
-  padding-top: 23px;
-  text-align: right;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  text-align: end;
+  float: right;
+  right: 0px;
+  align-items: flex-end;
+  justify-content: right;
+  padding-top: 26px;
 }
 #contactInfo {
   color: #ffffff;
@@ -94,7 +100,7 @@ body {
 }
 @media only screen and (max-width: 850px) {
   #logo {
-display: none;
+    display: none;
   }
 }
 @media only screen and (max-width: 600px) {
