--- a/src/goalsPage/goals.css
+++ b/src/goalsPage/goals.css
@@ -3,9 +3,7 @@
   padding: 0;
 }
 body {
-  background-image: url(https://images.pexels.com/photos/159045/the-interior-of-the-repair-interior-design-159045.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #303d4b;
   height: 100vh;
 }
 .navBar {
@@ -25,27 +23,28 @@ body {
 }
 
 .navBar a:hover {
-  background-color: #ddd;
+  background-color: rgb(255, 255, 255, 0.5);
   color: black;
 }
 .navBar a.active {
   text-decoration: underline;
   color: white;
   text-decoration-thickness: 2.1px;
-  border-radius: 10px;
   text-underline-offset: 5px;
   padding-left: 20px;
 }
+.navBar a.active:hover {
+  color: black;
+}
 #logo {
   padding: 40px;
-  font-size: 18px;
-  color: #f2f2f2;
-  padding-top: 23px;
-  text-align: right;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  text-align: end;
+  float: right;
+  right: 0px;
+  align-items: flex-end;
+  justify-content: right;
+  padding-top: 26px;
 }
-
 .header {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 0.01px;
@@ -57,8 +56,8 @@ body {
   float: left;
   background-color: rgba(255, 255, 255, 0.8);
   position: absolute;
-  width: 36%;
-  height: 90vh;
+  width: 20%;
+  height: 93vh;
 }
 #border span {
   padding: 13px 0px 28px 50px;
@@ -67,7 +66,7 @@ body {
   font-size: 18px;
 }
 #border span:hover {
-  color: rgb(129, 191, 202);
+  color: #89abcf;
 }
 #goals {
   display: flex;
@@ -81,20 +80,20 @@ body {
   float: right;
   width: 54%;
   height: 420px;
-  margin-right: 3%;
+  margin-right: 0%;
   margin-top: 7%;
   border-radius: 16px;
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.8);
   display: block;
 }
 #rightSide2 {
   float: right;
   width: 54%;
   height: 420px;
-  margin-right: 3%;
+  margin-right: 0%;
   margin-top: 7%;
   border-radius: 16px;
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.8);
   display: none;
 }
 #recognize1 {
@@ -111,10 +110,10 @@ body {
   float: right;
   width: 54%;
   height: 420px;
-  margin-right: 3%;
+  margin-right: 0%;
   margin-top: 7%;
   border-radius: 16px;
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.8);
   display: none;
 }
 #strive1 {
