--- a/src/home.css
+++ b/src/home.css
@@ -3,11 +3,10 @@
   padding: 0;
 }
 body {
-  background-color: rgb(26, 35, 26);
+  background-color: rgb(7, 7, 7);
 }
 #firstPage {
-  background-image: url("https://images.unsplash.com/photo-1616047006789-b7af5afb8c20?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80");
-  background-image: url("https://images.unsplash.com/photo-1616047006789-b7af5afb8c20?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80");
+  background-image: url("https://images.unsplash.com/photo-1564540586988-aa4e53c3d799?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -71,12 +70,14 @@ body {
   padding-top: 26px;
 }
 #header {
-  font-size: 40px;
-  color: #ffffff;
+  font-size: 44px;
+  color: #000000;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(255, 255, 255);
   padding-bottom: 23px;
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  font-weight: 600;
   padding-top: 20%;
 }
 
@@ -106,7 +107,7 @@ body {
 
 #secondPart {
   padding-top: 50px;
-  background-color: rgb(56, 81, 56);
+  background-color: rgb(0, 0, 0);
 }
 
 #flex {
@@ -135,7 +136,7 @@ body {
   padding-bottom: 30px;
 }
 #thirdPart {
-  background-color: rgb(26, 35, 26);
+  background-color: rgb(7, 7, 7);
 }
 #contact a {
   display: block;
@@ -144,7 +145,11 @@ body {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 24px;
+  text-decoration: none;
   font-size: 15px;
+}
+#contact a:hover {
+  text-decoration: underline;
 }
 
 #contact {
@@ -163,7 +168,7 @@ body {
 
 #footer {
   padding-top: 20px;
-  background-color: rgb(26, 35, 26);
+  background-color: rgb(7, 7, 7);
 }
 
 @media only screen and (max-width: 850px) {
@@ -230,9 +235,11 @@ body {
   }
   #contactInfo {
     font-size: 26px;
+    padding-top: 40px;
   }
   #paragraph {
-    font-size: 9px;
+    font-size: 8px;
+    padding-top: 80px;
   }
   #contact a {
     font-size: 12px;
@@ -249,8 +256,7 @@ body {
   }
   #header {
     font-size: 20px;
-    margin-bottom: 18%;
-  }
+padding-top: 30%;  }
   #img {
     height: 260px;
   }
