--- a/src/contactPage/contact.css
+++ b/src/contactPage/contact.css
@@ -137,10 +137,12 @@ body {
   width: 180px;
   height: 45px;
   border-style: none;
+  font-weight: 400;
   text-transform: uppercase;
 }
 #bt {
   padding-bottom: 40px;
+
 }
 @media only screen and (max-width: 850px) {
   #box {
