--- a/src/home.css
+++ b/src/home.css
@@ -70,14 +70,14 @@ body {
   padding-top: 26px;
 }
 #header {
-  font-size: 44px;
+  font-size: 48px;
   color: #000000;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: rgb(255, 255, 255);
   padding-bottom: 23px;
   text-align: center;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 600;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 800;
   padding-top: 20%;
 }
 
@@ -195,7 +195,7 @@ body {
     display: none;
   }
   #header {
-    font-size: 32px;
+    font-size: 36px;
   }
  
 }
@@ -256,8 +256,8 @@ body {
     margin-right: -10px;
   }
   #header {
-    font-size: 20px;
-padding-top: 30%;  }
+    font-size: 22px;
+padding-top: 25%;  }
   #img {
     height: 260px;
   }
